# eightpuzzle

./: ai-astar.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/flag-cache/: QuickCheck-2.8.1-de754978dce0747efe597fc55508354a  ai-astar-0.1.0.0  dequeue-0.1.12-772e48c420b635b38a1fd0a22e76d33e  queue-0.1.2-65b4cedda5cf8c82c8ab2d2d68f05d47  safe-0.3.9-fba013ebf6ec5d67814fea2ecacdc045  tf-random-0.5-8f006c6faadf3466f2baa1cf4822a9d0
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/dequeue-0.1.12-8eSZky3HwY94iWM3g2dyh4/: libHSdequeue-0.1.12-8eSZky3HwY94iWM3g2dyh4-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/dequeue-0.1.12-8eSZky3HwY94iWM3g2dyh4/Data/: Dequeue.dyn_hi  Dequeue.hi
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/dequeue-0.1.12-8eSZky3HwY94iWM3g2dyh4/Data/Dequeue/: Show.dyn_hi  Show.hi
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/queue-0.1.2-Hj3Ed2RNLvyHP15lfgPAHX/: libHSqueue-0.1.2-Hj3Ed2RNLvyHP15lfgPAHX-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/queue-0.1.2-Hj3Ed2RNLvyHP15lfgPAHX/Data/: Queue.dyn_hi  Queue.hi
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/lib/x86_64-osx-ghc-7.10.2/queue-0.1.2-Hj3Ed2RNLvyHP15lfgPAHX/Data/Queue/: Classes.dyn_hi  Classes.hi  Instances.dyn_hi  Instances.hi
.stack-work/install/x86_64-osx/lts-3.9/7.10.2/pkgdb/: dequeue-0.1.12-772e48c420b635b38a1fd0a22e76d33e.conf  package.cache  queue-0.1.2-65b4cedda5cf8c82c8ab2d2d68f05d47.conf
src/: Main.hs
(+2 files in other folders)
