name:                ai-astar
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ai-astar#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable ep
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pqueue <= 1.3.1
                     , containers <= 0.5.6.2
                     , vector <= 0.11.0.0
                     , matrix <= 0.3.4.4
